Refactored code, added error handling, added CLI and system architecture to README
