# app/controllers.go
@@ -1,6 +1,6 @@
 // Code generated by goagen v1.3.1, DO NOT EDIT.
 //
-// API "common services": Application Controllers
+// API "Common service APIs": Application Controllers
 //
 // Command:
 // $ goagen
@@ -13,6 +13,7 @@ package app
 import (
 	"context"
 	"github.com/goadesign/goa"
+	"github.com/goadesign/goa/cors"
 	"net/http"
 )
 
@@ -31,24 +32,62 @@ func initService(service *goa.Service) {
 	service.Decoder.Register(goa.NewJSONDecoder, "*/*")
 }
 
-// SchemaController is the controller interface for the Schema actions.
-type SchemaController interface {
+// PublicController is the controller interface for the Public actions.
+type PublicController interface {
 	goa.Muxer
 	goa.FileServer
 }
 
-// MountSchemaController "mounts" a Schema resource controller on the given service.
-func MountSchemaController(service *goa.Service, ctrl SchemaController) {
+// MountPublicController "mounts" a Public resource controller on the given service.
+func MountPublicController(service *goa.Service, ctrl PublicController) {
 	initService(service)
 	var h goa.Handler
+	service.Mux.Handle("OPTIONS", "/schema/*filepath", ctrl.MuxHandler("preflight", handlePublicOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/swagger/*filepath", ctrl.MuxHandler("preflight", handlePublicOrigin(cors.HandlePreflight()), nil))
 
 	h = ctrl.FileHandler("/schema/*filepath", "public/schema/")
+	h = handlePublicOrigin(h)
 	service.Mux.Handle("GET", "/schema/*filepath", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Schema", "files", "public/schema/", "route", "GET /schema/*filepath")
+	service.LogInfo("mount", "ctrl", "Public", "files", "public/schema/", "route", "GET /schema/*filepath")
+
+	h = ctrl.FileHandler("/swagger/*filepath", "public/swagger/")
+	h = handlePublicOrigin(h)
+	service.Mux.Handle("GET", "/swagger/*filepath", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Public", "files", "public/swagger/", "route", "GET /swagger/*filepath")
 
 	h = ctrl.FileHandler("/schema/", "public/schema/index.html")
+	h = handlePublicOrigin(h)
 	service.Mux.Handle("GET", "/schema/", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Schema", "files", "public/schema/index.html", "route", "GET /schema/")
+	service.LogInfo("mount", "ctrl", "Public", "files", "public/schema/index.html", "route", "GET /schema/")
+
+	h = ctrl.FileHandler("/swagger/", "public/swagger/index.html")
+	h = handlePublicOrigin(h)
+	service.Mux.Handle("GET", "/swagger/", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Public", "files", "public/swagger/index.html", "route", "GET /swagger/")
+}
+
+// handlePublicOrigin applies the CORS response headers corresponding to the origin.
+func handlePublicOrigin(h goa.Handler) goa.Handler {
+
+	return func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		origin := req.Header.Get("Origin")
+		if origin == "" {
+			// Not a CORS request
+			return h(ctx, rw, req)
+		}
+		if cors.MatchOrigin(origin, "*") {
+			ctx = goa.WithLogContext(ctx, "origin", origin)
+			rw.Header().Set("Access-Control-Allow-Origin", origin)
+			rw.Header().Set("Access-Control-Allow-Credentials", "false")
+			if acrm := req.Header.Get("Access-Control-Request-Method"); acrm != "" {
+				// We are handling a preflight request
+				rw.Header().Set("Access-Control-Allow-Methods", "GET")
+			}
+			return h(ctx, rw, req)
+		}
+
+		return h(ctx, rw, req)
+	}
 }
 
 // StorageController is the controller interface for the Storage actions.
@@ -81,8 +120,8 @@ func MountStorageController(service *goa.Service, ctrl StorageController) {
 		}
 		return ctrl.Add(rctx)
 	}
-	service.Mux.Handle("POST", "/storage", ctrl.MuxHandler("add", h, unmarshalAddStoragePayload))
-	service.LogInfo("mount", "ctrl", "Storage", "action", "Add", "route", "POST /storage")
+	service.Mux.Handle("POST", "/api/v0/storage", ctrl.MuxHandler("add", h, unmarshalAddStoragePayload))
+	service.LogInfo("mount", "ctrl", "Storage", "action", "Add", "route", "POST /api/v0/storage")
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -96,8 +135,8 @@ func MountStorageController(service *goa.Service, ctrl StorageController) {
 		}
 		return ctrl.Cat(rctx)
 	}
-	service.Mux.Handle("GET", "/storage/:address", ctrl.MuxHandler("cat", h, nil))
-	service.LogInfo("mount", "ctrl", "Storage", "action", "Cat", "route", "GET /storage/:address")
+	service.Mux.Handle("GET", "/api/v0/storage/:address", ctrl.MuxHandler("cat", h, nil))
+	service.LogInfo("mount", "ctrl", "Storage", "action", "Cat", "route", "GET /api/v0/storage/:address")
 }
 
 // unmarshalAddStoragePayload unmarshals the request body into the context request data Payload field.
@@ -113,26 +152,11 @@ func unmarshalAddStoragePayload(ctx context.Context, service *goa.Service, req *
 	if err != nil {
 		return err
 	}
+	if err := payload.Validate(); err != nil {
+		// Initialize payload with private data structure so it can be logged
+		goa.ContextRequest(ctx).Payload = payload
+		return err
+	}
 	goa.ContextRequest(ctx).Payload = payload.Publicize()
 	return nil
-}
-
-// SwaggerController is the controller interface for the Swagger actions.
-type SwaggerController interface {
-	goa.Muxer
-	goa.FileServer
-}
-
-// MountSwaggerController "mounts" a Swagger resource controller on the given service.
-func MountSwaggerController(service *goa.Service, ctrl SwaggerController) {
-	initService(service)
-	var h goa.Handler
-
-	h = ctrl.FileHandler("/swagger/*filepath", "public/swagger/")
-	service.Mux.Handle("GET", "/swagger/*filepath", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Swagger", "files", "public/swagger/", "route", "GET /swagger/*filepath")
-
-	h = ctrl.FileHandler("/swagger/", "public/swagger/index.html")
-	service.Mux.Handle("GET", "/swagger/", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Swagger", "files", "public/swagger/index.html", "route", "GET /swagger/")
 }
